Обновлен код после отката
